# ABrain

./: .env.example  .env.production  .gitignore  404.html  AGENTS.md  BenutzerHandbuch.html  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.md  FULLSTACK_README.md  Konsolidierung-und-Integration-redundanter-Implementierungen.md  README.md  RELEASE_NOTES.html  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  Roadmap.md  SETUP_FIXES.md  TODO-Liste für Agent-NN Entwicklungsplan.md  agent_deployment.html  api.html  api_reference.html  architecture_overview.html  catalog.html  cli.html  cli_dev.html  cli_quickstart.html  config_reference.html  context_map.html  deployment.html  dev_managers.html  developer_setup.html  docker-compose.yml  docusaurus.config.js  errors.html  flowise-plugin.json  flowise_nodes.html  flowise_plugin.html  flowisehub_publish.html  frontend_bridge.html  frontend_ux_checklist.html  (+39 more)
.claude/: settings.json
BenutzerHandbuch/: Marketing-Agent.html  smolitux-ui.html  uebersicht.html
adapters/: __init__.py
agentnn/: __init__.py
api/: advanced_endpoints.html  agent_registry.html  api_reference.html  chat.html  client.py  dispatcher.html  endpoints.py  errors.html  flowise_bridge.py  llm_gateway.html  models.py  openapi-overview.html  plugin_agent.html  session_manager.html  smolitux_integration.py  vector_store.html  worker_services.html
api_gateway/: main.py  schemas.py
architecture/: AGENT_MODEL_AND_FLOWISE_INTEROP.html  AUDIT_AND_EXPLAINABILITY_LAYER.html  CANONICAL_RUNTIME_STACK.html  CONTROL_PLANE_API_MAPPING.html  CONTROL_PLANE_CURRENT_STATE.html  CONTROL_PLANE_TARGET_STATE.html  CORE_REFACTOR.html  Code-Dokumentation.html  DECISION_LAYER_AND_NEURAL_POLICY.html  EXECUTION_LAYER_AND_AGENT_CREATION.html  GOVERNANCE_LAYER.html  HITL_AND_APPROVAL_LAYER.html  MCP_V1_SERVER.html  MCP_V2_INTERFACE.html  MULTI_AGENT_ORCHESTRATION.html  NATIVE_DEV_AGENT_ADAPTERS.html  PERSISTENT_STATE_AND_DURABLE_RUNTIME.html  PERSISTENT_STATE_STORAGE_DECISIONS.html  PROJECT_OVERVIEW.html  WORKFLOW_ADAPTER_LAYER.html  access_control.html  agent_bus.html  agent_evolution.html  agent_levels.html  agent_memory.html  agent_missions.html  agent_profiles.html  agent_teams.html  analysis.html  audit_logging.html  coalitions.html  delegation_model.html  dispatch_queue.html  dynamic_roles.html  extensibility.html  federation.html  feedback.html  feedback_loop.html  governance.html  identity_and_signatures.html  (+18 more)
cli/: CLI-Dokumentation.html  cli_reference.html
core/: __init__.py  config.py  crypto.py  metrics_utils.py  model_context.py
deployment/: cloud.html  docker.html  kubernetes.html  storage.html
development/: api_overview.html  cicd.html  cli_usage.html  contributing.html  model_tracking.html  nxlv-python.html  plugins.html  sdk_usage.html  services.html  setup.html  smolitux-ui-dev.html
docs/: RELEASE_NOTES.md  ROADMAP_consolidated.md  architecture_overview.md  cli.md  config_reference.md  deployment.md  flowise_nodes.md  flowise_plugin.md  flowisehub_publish.md  frontend_bridge.md  index.html  index.md  maintenance.md  mcp.md  metrics_reference.md  migration_status.md  overview.md  package-lock.json  package.json  plugins.md  release_checklist.md  roadmap.md  roles.md  sessions.md  setup.md  smolitux-ui-integration.md  tools.md  ui_migration_audit.md
frontend/: overview.html
governance/: goals.html  maintenance.html  release_policy.html
guides/: MCP_USAGE.html
integrations/: OpenHands-Flowise-Flow.html  flowise.html  full_integration_plan.html  langchain_bridge.html  n8n.html  openhands_workflows.html
interfaces/: __init__.py
mcp/: MCP_SERVER_USAGE.html  MCP_V1_SERVER.html  docker-compose.yml
monitoring/: README.md  agen-nn_dashboard.tsx  package.json
observability/: monitoring.html
releases/: FOUNDATIONS_RELEASE_CHECKLIST.html  FOUNDATIONS_RELEASE_SCOPE.html  RELEASE_NOTES_FOUNDATIONS.html  hotfix_template.html  v1.0.0-beta.html  v1.0.2.html  v1.0.3.html
reviews/: abrain_rename_plan.html  abrain_rename_review_summary.html  adminbot_adapter_review_summary.html  legacy_labeling_scheme.html  legacy_repo_consolidation_report.html  mcp_v1_review_summary.html  phase1_adminbot_v2_integration_review.html  phaseD_learning_system_review.html  phaseE_stabilization_release_review.html  phaseF1_native_dev_agents_review.html  phaseF2_workflow_adapters_review.html  phaseH_multi_agent_orchestration_review.html  phaseI_hitl_approval_review.html  phaseK_audit_explainability_review.html  phaseM_control_plane_review.html  (+8 more)
(+845 files in other folders)
