[tool.ruff]
line-length = 120
ignore = ["E402"]
extend-exclude = [
  "archive",
  "agents",
  "api",
  "cli",
  "openhands_api",
  "llm_models",
  "nn_models",
  "managers",
  "plugins",
  "training",
  "datastores",
  "monitoring",
  "evaluation",
  "security",
  "rag",
  "mlflow_integration",
  "tests",
  "scripts",
  "benchmarks",
  "frontend",
  "docs",
]

[tool.poetry]
name = "agentnn"
version = "1.0.0"
description = "ABrain modular agent execution and neural orchestration framework"
authors = ["OpenHands <openhands@all-hands.dev>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "adapters" },
  { include = "agentnn" },
  { include = "core" },
  { include = "managers" },
  { include = "sdk" },
  { include = "mcp" },
  { include = "services" },
  { include = "interfaces" },
  { include = "scripts" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "*"
httpx = "*"
typer = "*"
pydantic-settings = "*"
pydantic = "*"
PyYAML = "*"
tqdm = "*"
uvicorn = "*"
sqlalchemy = "*"
slowapi = "*"
aiofiles = "*"
prometheus-client = "*"
loguru = "*"
python-json-logger = "*"
aiohttp = "*"
structlog = "*"
cryptography = "*"
mlflow = "*"
openai = "*"
langchain = "*"
langchain-openai = "*"
langchain-community = "*"
langchain-huggingface = "*"
transformers = "*"
torch = "*"
scikit-learn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
mypy = "*"
ruff = "*"
black = "*"

[tool.poetry.extras]
sdk = []

[project.scripts]
abrain-mcp = "interfaces.mcp_v1.server:main"

[tool.poetry.scripts]
agentnn = "sdk.cli.main:app"
mcp_cli = "mcp.cli:app"
abrain-mcp = "interfaces.mcp_v1.server:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
