[tool.ruff]
line-length = 120
ignore = ["E402"]
extend-exclude = [
  "tests",
  "scripts",
  "frontend",
  "docs",
]

[tool.poetry]
name = "abrain"
version = "1.1.0"
description = "ABrain modular agent execution and neural orchestration framework"
authors = ["OpenHands <openhands@all-hands.dev>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "adapters" },
  { include = "core" },
  { include = "services" },
  { include = "interfaces" },
  { include = "api_gateway" },
  { include = "scripts" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "*"
httpx = "*"
pydantic-settings = "*"
pydantic = "*"
PyYAML = "*"
uvicorn = "*"
slowapi = "*"
prometheus-client = "*"
structlog = "*"
python-json-logger = "*"
scikit-learn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
mypy = "*"
ruff = "*"
black = "*"

[project.scripts]
abrain-mcp = "interfaces.mcp.server:main"

[tool.poetry.scripts]
abrain-mcp = "interfaces.mcp.server:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
